2001-03-30  Larry Jones  <larry.jones@sdrc.com>

	* log.c (log_fileproc): Don't output working file for rlog.
	* sanity.sh (log): New tests for rlog.

	* cvs.h (mtype): Add MISC type.
	* log.c (cvslog): Support rlog as well as log.
	(rlog_proc): New.
	* main.c (cmds[], cmd_usage[]): Add rlog.
	(main): Remove old rlog warning message.
	* server.c (serve_rlog): New.
	(requests[]): Add rlog.

2001-03-29  Derek Price  <dprice@collab.net>

	* sanity.sh: cd to $TESTDIR once after it is normalized.  Make TODO
	on history and symlinks more specific.  Tested properly this time.

2001-03-29  Larry Jones  <larry.jones@sdrc.com>

	* main.c (cmds[], lookup_command_attribute, main): Include the
	command attributes in the global command table instead of inferring
	them from the command names.  Change the sense of the
	CVS_CMD_IGNORE_ADMROOT attribute to match its name.

2001-03-29  Derek Price  <dprice@collab.net>

	* sanity.sh (*, basic2-64): Remove references to TMPPWD.  Fix FIXME
	at end of script now that $TESTDIR can't be relative.

2001-03-29  Derek Price  <dprice@collab.net>

	* sanity.sh: Normalize TESTDIR even when the user set it.

2001-03-29  Larry Jones  <larry.jones@sdrc.com>

	* client.c (connect_to_pserver, start_tcp_server): Add IP address
	to connect failed message.
	(connect_to_forked_server, connect_to_pserver, start_tcp_server): Add
	trace messages ala start_rsh_server.
	(start_rsh_server): Include entire command in trace message for
	START_RSH_WITH_POPEN_RW like ! START_RSH_WITH_POPEN_RW does.

2001-03-29  Derek Price  <dprice@collab.net>

	* sanity.sh: Global search & replace ${TESTDIR}/cvsroot with
	${CVSROOT_DIRNAME} for consistency.

2001-03-29  Derek Price  <dprice@collab.net>

	* sanity.sh (conflicts-12[68].5): Remove sanity hack which has allowed
	for a CVS bug since May 96/97.  Not sure when the bug went bye-bye, but
	the tests broke when $TESTDIR != $TMPPWD.

2001-03-26  Larry Jones  <larry.jones@sdrc.com>
