@@ -1,3 +1,7 @@
+2001-03-30  Derek Price  <dprice@collab.net>
+
+	* sanity.sh (join-readonly-conflict): Run more of this through dotest.
+
 2001-03-30  Larry Jones  <larry.jones@sdrc.com>
 
 	* log.c (log_fileproc): Don't output working file for rlog.
